src/sidebar.css
body {
	background-color: var(--sidebar-background-color);
	color: var(--sidebar-color);
}
.tab {
	width: 100%;
	height: 26px;
	clear: both;
	column-gap: 5px;
	display: flex;
	flex-direction: row;
	align-items: center;
}

.tab:hover {
	background-color: var(--tab-hover-background-color);
}

.badge {
	-moz-context-properties: fill;
	fill: var(--badge-background);
	border-radius: 4px;
	color: var(--badge-text-color);
	font-style: normal;
	pointer-events:none;
}

.context {
	width: 2px;
	height: 100%;
	margin-right:-2px;
	flex-shrink: 0;
}

.fold {
	background-color: var(--fold-indicator-background-color);
	padding: 0 0.2rem;
}

.mute-icon-container {
	width: 14px;
	height: 14px;
}

.mute {
	width: 18px;
	height: 18px;
	background-color: var(--mute-indicator-background-color);
	pointer-events: auto;
	display: flex;
	justify-content: center;
	align-items: center;
}

.mute:hover {
	background-color: var(--mute-indicator-hover-color);
}

.favicon {
	-moz-context-properties: fill;
	fill: var(--favicon-fill-color);
	width: 16px;
	height: 16px;
	background-size: contain;
	pointer-events:none;
	flex-shrink: 0;
}

.attention {
	background-image: url("./icons/indicator-tab-attention.svg");
	width: 8px;
	height: 8px;
	float:left;
	top: 50%;
	transform: translateY(-50%);
	position: relative;
	display: inline-block;
	background-size: contain;
	pointer-events:none;
}

@keyframes throbber {
	from {object-position: 0px 0px;}
	to {object-position: calc(-960px * calc(16/16)) 0px;}
}

.throbber {
	object-fit: none;
	animation: throbber 1s steps(60) infinite;
}

.discarded {
	color: var(--tab-discarded-color);
	font-style: italic;
}

.active {
	background-color: var(--tab-active-background-color);
	color: var(--tab-active-color);
}

.hspace {
	flex-grow: 1
}

.tabTitle {
	white-space: nowrap;
	line-height: 26px;
	width: 0px;
	display:inline-block;
}

.closeButton {
	display: none;
	width: 22px;
	height: 22px;
	border-radius: 4px;
	margin-right: 4px;
	justify-content: center;
	align-items: center;
}

.closeIcon {
	background-image: url("./icons/close.svg");
	background-size: contain;
	-moz-context-properties: fill;
	fill: var(--favicon-fill-color);
	width: 12px;
	height: 12px;
}

.selection {
	background-color: var(--tab-selected-background-color);
}

.tab.discarded.selection {
	color: var(--tab-selected-discarded-color);
}

.tab.selection:hover {
	background-color: var(--tab-selected-hover-background-color);
}

.tab.active:hover {
	background-color: var(--tab-active-hover-background-color);
}

.tab:hover > .closeButton {
	display: flex;
	background-color: var(--tab-hover-background-color);
}

.tab.selection:hover > .closeButton {
	background-color: var(--tab-selected-hover-background-color);
}

.tab.active:hover > .closeButton {
	background-color: var(--tab-active-hover-background-color);
}

.closeButton:hover > .closeIcon {
	width: 16px;
	height: 16px;
}

.tab.pinned:hover > .closeButton {
	display: none;
}

.childContainer {
	padding-left: 15px;
}

.tab .pinned {
	display: inline-block;
}

.pinned {
	width: 26px;
	float: left;
	clear: none;
}

.pinned > .closeButton {
	display: none;
}

.pinned > .badge {
	width: 12px;
	height: 12px;
	border-radius: 6px;
}

.pinned > .mute > .mute-icon-container {
	width: 10px;
	height: 10px;
}

.pinned > .tabTitle {
	display: none;
}

.pinned > .hspace {
	display: none;
}

.pinned .tab {
	column-gap: 0px;
}

.pinned > .mute  {
	transform: translate(-12px, 5px);
}

.hidden {
	display: none;
}

#selection-box {
	display: none;
	pointer-events: none;
	position: absolute;
	will-change: transform;
	background-color: #304FFE88;
	border: 1px solid #3D5AFE;
}

.dropIndicator {
	height: 2px;
	width: 100%;
	border: var(--drag-indicator-color) 1px solid;
	position: absolute;
	will-change: left, top, transform;
	pointer-events: none;
}

